--- a/Barberia/Barberia/Barberia.csproj
+++ b/Barberia/Barberia/Barberia.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Library\Library.csproj" />
     <ProjectReference Include="..\Barberia.Client\Barberia.Client.csproj" />
+    <PackageReference Include="Blazored.Modal" Version="7.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
@@ -20,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\Pages\Factura\" />
     <Folder Include="wwwroot\Imagenes\" />
     <Folder Include="wwwroot\Font\" />
     <Folder Include="wwwroot\NewFolder\" />
