--- a/Barberia/Barberia.Client/Barberia.Client.csproj
+++ b/Barberia/Barberia.Client/Barberia.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Library\Library.csproj" />
+  </ItemGroup>
+
 </Project>
