Base de datos y Migration actualizados

--- a/Barberia/Barberia/Barberia.csproj
+++ b/Barberia/Barberia/Barberia.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Pages\Productos\" />
     <Folder Include="wwwroot\Imagenes\" />
     <Folder Include="wwwroot\Font\" />
     <Folder Include="wwwroot\NewFolder\" />
